app/ui/project/components/Section/Section.module.scss
@use '@/app/ui/style-library/global/tokens/mixins' as vars;
@use '@/app/ui/style-library/global/utils' as *;

$spacingunit: clamp(4rem, 8vw, 28rem);

.section {
	margin-top: var(--block-spacing--shallow);
	margin-bottom: $spacingunit;
	position: relative;
	@include vars.break(tablet){
		background-color: var(--color-bg-alt-70);
	}
	@include vars.light-mode-wrapper {
		background-color: var(--color-bg-off-solid-70);
	}
	&__heading-top {
		text-align: center;
		margin-bottom: var(--block-spacing--shallow);
		@include vars.text-heading--chunky;
		color: var(--color-accent-alt);
		@include vars.light-mode-wrapper {
			color: var(--color-accent-alt);
		}
	}
	&____no-spacing {
		margin-bottom: 0;
		border-bottom: 0;
	}
	&____line {
		border-top: 1px solid transparent;
		border-image: linear-gradient(90deg, var(--color-accent) 85%, var(--color-accent-alt) 85%) 1;
		padding-top: $spacingunit;
		@include vars.light-mode-wrapper {
			border-top-color: var(--color-accent-alt);
		}
		&::before {
			position: absolute;
			display: block;
			right: 15%;
			top: 0;
			transform: translate(50%, -50%);
			content: '';
			width: 30px;
			aspect-ratio: 1/1;
			background: linear-gradient(to right, var(--color-accent), var(--color-accent-alt));
			clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
		}
	}
	&_____no-min-height {
		min-height: unset;
	}
	&____hidden-heading {
		.section__heading-top {
			@extend .visually-hidden;
		}
	}
	&____deep-mb {
		margin-bottom: calc($spacingunit * 2);
	}
	&____deep-mb-line {
		margin-bottom: $spacingunit;
		padding-bottom: $spacingunit;
		&::after {
			content: '';
			display: block;
			width: 100%;
			height: 1px;
			background-color: var(--color-accent-20);
			position: absolute;
			bottom: 0;
			left: 0;
		}
	}
}

